[package]
name = "os_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] } # 引导程序
volatile = "0.2.6" # 可保证读写操作不被编译器优化掉
spin = "0.5.2" # 自旋锁，不能使用标准库中 mutex
x86_64 = "0.14.2" # 使用提供的 in out 等指令，中断表等结构，物理内存和虚拟内存
uart_16550 = "0.2.0" # 使用串口
pic8259 = "0.10.1" # 中断控制器
pc-keyboard = "0.5.0" # 键盘映射转换
linked_list_allocator = "0.9.0" # 堆分配器

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"] # 不连接标准库

[profile.dev]
#panic = "abort" # 禁用 panic 时栈展开, 这样就不用提供 en_personality 语言项

[profile.release]
#panic = "abort" # 禁用 panic 时栈展开

[package.metadata.bootimage]
# 只在 test 时生效
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # 退出设备，指定设备端口号和数据类型（0x04 = 4byte = u32）
    "-serial", "stdio", # 串口配置，对接标准输出
    "-display", "none" # 不显示 qemu 窗口
]
test-timeout = 300 # 每个测试的超时时间（s）
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false # 不使用常规的 test 入口，直接使用 _start

[[test]]
name = "stack_overflow"
harness = false